infrastructure/kubernetes/overlays/preprod/airflow/http-route-airflow.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: airflow
  namespace: airflow
spec:
  parentRefs:
    - name: preprod         
      namespace: networking            
  hostnames:
    - "airflow.preprod.djepenodev.ink"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: airflow-api-server
          namespace: airflow
          port: 8080
